valid_tests/operators/test3.go
// Test 3: Modulo operator
func main() {
    x := 17
    y := 5
    remainder := x % y
    even := x % 2 == 0
}
