invalid_tests/syntax_errors/test3.go
// Test 3: Missing parentheses in function declaration
func main {
    x := 10
}
